--- a/css/app.css
+++ b/css/app.css
@@ -9720,6 +9720,11 @@ h3 {
 .ch-100 {
   height: calc(1080px - 95px) !important;
 }
+@media (max-width: 991px) {
+  .ch-100 {
+    height: unset !important;
+  }
+}
 
 @media (min-width: 992px) {
   .mr-lg-5 {
@@ -9735,17 +9740,14 @@ h3 {
   width: 26% !important;
 }
 
-@media (max-width: 991px) {
-  .mt-md-50p {
-    margin-top: 50% !important;
-  }
-}
 .mb-6 {
   margin-bottom: 4rem !important;
 }
 
-.mt-200x {
-  margin-top: 220px;
+@media (min-width: 992px) {
+  .mt-md-200x {
+    margin-top: 220px;
+  }
 }
 
 body {
@@ -9810,6 +9812,11 @@ a:focus {
   padding: 0 15%;
   margin-bottom: 0;
 }
+@media (max-width: 768px) {
+  .l_header--h2 {
+    padding: unset;
+  }
+}
 
 .l_ud {
   z-index: 10;
@@ -9856,9 +9863,7 @@ a:focus {
 }
 @media (max-width: 991px) {
   .bgg::before {
-    background: url(../images/bg_forms.svg);
-    background-position: 0 0;
-    left: 50%;
+    content: none;
   }
 }
 
@@ -9867,16 +9872,24 @@ a:focus {
   position: relative;
 }
 @media (max-width: 991px) {
-  .l_header .l_header--navbar {
-    width: 85vw;
-    top: 50px;
-    z-index: 1030;
-    position: fixed;
+  .l_header .container.bgg {
+    max-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
   }
 }
-@media (max-width: 568px) {
+@media (max-width: 991px) {
   .l_header .l_header--navbar {
-    width: 95vw;
+    border-bottom: 1px solid #E5E9EF;
+    width: 100vw;
+    background-color: white;
+    padding: 1rem 1rem !important;
+    top: 0;
+    z-index: 1030;
+    position: fixed;
   }
 }
 .l_header .l_header--navbar .l_header--menu {
@@ -9960,6 +9973,8 @@ a:focus {
 @media (max-width: 991px) {
   .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
     height: 47px;
+    width: 50%;
+    margin: 0 auto;
   }
 }
 .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button:hover {
@@ -9975,7 +9990,7 @@ a:focus {
   overflow: hidden;
   z-index: 2;
 }
-@media (min-width: 768px) {
+@media (min-width: 993px) {
   .l_header .masthead {
     height: 100%;
     min-height: 0;
@@ -10003,6 +10018,11 @@ a:focus {
 @media (max-width: 541px) {
   .l_header .masthead .masthead-content .sub_text {
     font-size: 16px;
+  }
+}
+@media (max-width: 991px) {
+  .l_header .masthead .masthead-content .sub_text {
+    max-width: 100%;
   }
 }
 
