--- a/css/app.css
+++ b/css/app.css
@@ -9631,10 +9631,12 @@ h3 {
 .btn-custom:hover {
   color: #FFF;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 .btn-custom:focus {
   color: #FFF;
   background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
+  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
 .btn-inline-custom, .btn-inline-custom2 {
@@ -9750,6 +9752,64 @@ h3 {
   }
 }
 
+.pt-6 {
+  padding-top: 4rem !important;
+}
+
+.navbar-collapse {
+  transition: all 1s ease-in-out;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.l-navbar--toggler {
+  cursor: pointer;
+  z-index: 100;
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+.navbar-toggler {
+  z-index: 30;
+}
+
+@media (max-width: 991px) {
+  .collapse {
+    position: fixed;
+    width: 100%;
+    z-index: 20;
+    background: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+    top: 0;
+    display: flex;
+    height: 100%;
+    left: 0;
+    margin-top: 3.5rem;
+    opacity: 1;
+    visibility: visible;
+  }
+  .collapse .l_header--menu {
+    margin: auto;
+    align-items: center;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .l-navbar--toggler {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .collapse:not(.show) {
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
 body {
   font-family: "MontserratMedium", sans-serif;
   font-size: 16px;
@@ -9773,6 +9833,10 @@ a:hover {
 a:focus {
   color: #b01e56;
   text-decoration: none;
+}
+
+button:focus {
+  outline: none;
 }
 
 @media (min-width: 1200px) {
@@ -9801,7 +9865,7 @@ a:focus {
     font-size: 26px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .l_header--h1, .l_header--h2 {
     font-size: 30px;
   }
@@ -9886,19 +9950,17 @@ a:focus {
     border-bottom: 1px solid #E5E9EF;
     width: 100vw;
     background-color: white;
-    padding: 1rem 1rem !important;
+    padding: 0.5rem 1rem !important;
     top: 0;
     z-index: 1030;
     position: fixed;
   }
 }
+.l_header .l_header--navbar .navbar-brand {
+  z-index: 100;
+}
 .l_header .l_header--navbar .l_header--menu {
   font-family: "MontserratMedium", sans-serif;
-}
-@media (max-width: 991px) {
-  .l_header .l_header--navbar .l_header--menu {
-    background: white;
-  }
 }
 .l_header .l_header--navbar .l_header--menu .l_lang .nav-link {
   display: inline-flex;
@@ -9927,11 +9989,6 @@ a:focus {
   color: #E475AC !important;
   background-color: #FFF;
 }
-@media (max-width: 991px) {
-  .l_header .l_header--navbar .l_header--menu .l_lang .l_current_lang--en {
-    background-color: #666;
-  }
-}
 .l_header .l_header--navbar .l_header--menu .l_lang .l_current_lang--en:hover {
   color: #cb2879 !important;
 }
@@ -9943,13 +10000,13 @@ a:focus {
   font-size: 21px;
   text-transform: uppercase;
 }
-.l_header .l_header--navbar .l_header--menu .nav-item .nav-link:hover {
-  color: #cccccc;
-}
 @media (max-width: 991px) {
   .l_header .l_header--navbar .l_header--menu .nav-item .nav-link {
-    color: #000;
+    padding: 1rem 1rem;
   }
+}
+.l_header .l_header--navbar .l_header--menu .nav-item .nav-link:hover {
+  color: #cccccc;
 }
 @media (min-width: 992px) and (max-width: 1200px) {
   .l_header .l_header--navbar .l_header--menu .nav-item .nav-link {
@@ -9972,9 +10029,8 @@ a:focus {
 }
 @media (max-width: 991px) {
   .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
-    height: 47px;
-    width: 50%;
-    margin: 0 auto;
+    width: 165px;
+    height: 63px;
   }
 }
 .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button:hover {
@@ -9997,6 +10053,9 @@ a:focus {
     width: 40.5rem;
     padding-bottom: 0;
   }
+}
+.l_header .masthead .masthead-content {
+  padding-top: 4rem;
 }
 .l_header .masthead .masthead-content h1 {
   font-size: 57px;
@@ -10065,7 +10124,7 @@ a:focus {
     font-size: 200px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .l_capability .l_cap--card .l_cap--number {
     font-size: 250px;
   }
