--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,7 +8,7 @@
 @import "fonts";
 @import "button";
 @import "util";
-
+@import "nav";
 
 body {
   font-family: 'MontserratMedium', sans-serif;
@@ -36,6 +36,11 @@ a {
   }
 }
 
+button:focus {
+  outline: none;
+}
+
+
 .container {
   @media (min-width: 1200px) {
     max-width: 1170px;
@@ -57,7 +62,7 @@ a {
   @media (max-width: 768px) {
     font-size: 26px;
   }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     font-size: 30px;
   }
 }
@@ -144,16 +149,16 @@ a {
       border-bottom: 1px solid #E5E9EF;
       width: 100vw;
       background-color: white;
-      padding: 1rem 1rem !important;
+      padding: 0.5rem 1rem !important;
       top: 0;
       z-index: 1030;
       position: fixed;
     }
+    .navbar-brand{
+      z-index: 100;
+    }
     .l_header--menu {
       font-family: 'MontserratMedium', sans-serif;
-      @media (max-width: 991px) {
-        background: rgba(255, 255, 255, 1);
-      }
 
       .l_lang {
         .nav-link {
@@ -161,6 +166,7 @@ a {
           background-color: #FFF;
           padding-right: 15px !important;
           padding-left: 15px !important;
+
         }
 
         .l_current_lang {
@@ -182,9 +188,6 @@ a {
           &--en {
             color: #E475AC !important;
             background-color: #FFF;
-            @media (max-width: 991px) {
-              background-color: #666;
-            }
 
             &:hover {
               color: darken(#E475AC, 20%) !important;
@@ -201,14 +204,13 @@ a {
           color: #FFF;
           font-size: 21px;
           text-transform: uppercase;
-
+          @media (max-width: 991px) {
+            padding: 1rem 1rem;
+          }
           &:hover {
             color: darken(#FFF, 20%);
           }
 
-          @media (max-width: 991px) {
-            color: #000;
-          }
           @media (min-width: 992px) and (max-width: 1200px) {
             padding-right: 20px;
             padding-left: 20px;
@@ -226,9 +228,8 @@ a {
             height: 41px;
           }
           @media (max-width: 991px) {
-            height: 47px;
-            width: 50%;
-            margin: 0 auto;
+            width: 165px;
+            height: 63px;
           }
 
           &:hover {
@@ -257,6 +258,7 @@ a {
     }
 
     .masthead-content {
+      padding-top: 4rem;
       h1 {
         font-size: 57px;
         font-family: 'RubikRegular', sans-serif;
@@ -321,7 +323,7 @@ a {
       @media (max-width: 768px) {
         font-size: 200px;
       }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         font-size: 250px;
       }
     }
