--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -8,11 +8,13 @@
   &:hover {
     color: #FFF;
     background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+    box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
 
   &:focus {
     color: #FFF;
     background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
+    box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
 
 }
