--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,14 +58,17 @@ button:focus {
   text-transform: uppercase;
   margin-bottom: 1.8rem;
   letter-spacing: 1px;
-  @media (max-width: 541px) {
-    font-size: 21px;
+  @media (max-width: 1200px) {
+    font-size: 32px;
+  }
+  @media (max-width: 991px) {
+    font-size: 30px;
   }
   @media (max-width: 768px) {
     font-size: 26px;
   }
-  @media (max-width: 991px) {
-    font-size: 30px;
+  @media (max-width: 541px) {
+    font-size: 21px;
   }
 }
 
@@ -355,7 +358,6 @@ button:focus {
     font-family: Montserrat;
     font-weight: 500;
     text-align: center;
-
     .l_cap--number {
       font-size: 304px;
       color: #BD90E4;
@@ -374,6 +376,7 @@ button:focus {
       }
       @media (max-width: 991px) {
         font-size: 250px;
+
       }
     }
 
@@ -413,9 +416,11 @@ button:focus {
   .l_tariff--content {
     background-color: #FFF;
     margin-top: 20px;
-
+    @media (max-width: 991px) {
+      background-color: unset;
+    }
     .l_card--free{
-      @media (min-width: 993px) {
+      @media (min-width: 992px) {
         border-radius: 8px 0 0 8px !important;
       }
     }
@@ -430,6 +435,9 @@ button:focus {
       box-shadow: 0 13px 51px 0 rgba(68, 72, 230, 0.06);
       border-right: 1px solid #F6EDFC;
       border-radius: unset;
+      @media (max-width: 991px) {
+        margin-top: 5px;
+      }
       .card-body {
         .card-title {
           color: #BD90E4;
@@ -520,7 +528,10 @@ button:focus {
     color: #FFF;
     padding-top: 40px;
     padding-bottom: 45px;
-
+    @media (max-width: 576px) {
+      width: calc(100% + 30px);
+      left: -15px;
+    }
     .l_tariff-footer--content {
       position: relative;
       z-index: 23;
@@ -560,19 +571,48 @@ button:focus {
 }
 
 .l_feedback {
-  background: url(../images/feedback_Illustration.svg), url(../images/feedback_bg1.svg), url(../images/feedback_bg2.svg);
-  background-position: 59% 120%, left top, right bottom;
+  background: url(../images/feedback_bg1.svg), url(../images/feedback_bg2.svg);
+  background-position: left top, right bottom;
   background-repeat: no-repeat;
   background-color: #EDEFFF;
   padding-top: 75px;
+  background-size: 14vh, 49vh;
   z-index: 20;
+  height: 100vh;
   padding-bottom: 670px;
   position: relative;
   @media (max-width: 768px) {
     background: #EDEFFF;
     padding-bottom: 0;
   }
-
+  .l_feedback--bgg{
+    position: absolute;
+    min-height: 100vh;
+    min-width: 100vw;
+    background: url(../images/feedback_Illustration.svg);
+    background-position: 59% 122%;
+    background-repeat: no-repeat;
+    background-size: calc(83vh);
+    bottom: 0;
+    left: 0;
+    @media (max-height: 900px) {
+      background-position: 59% 112%;
+      background-size: calc(70vh);
+    }
+    @media (max-width: 991px) {
+      background-position: 0 112%;
+    }
+    @media (max-width: 440px) {
+      background-position: 0 110%;
+      background-size: calc(58vh);
+    }
+    @media (max-height: 700px) and (max-width: 400px) {
+      background: none;
+    }
+    @media (min-height: 1200px) and (min-width: 1010px) and (max-width: 1300px) {
+      background-position: 0 110%;
+    }
+  }
   .l_header--h1 {
     //font-family: MontserratMedium, sans-serif;
     font-family: Montserrat;
