--- a/src/scss/util.scss
+++ b/src/scss/util.scss
@@ -32,8 +32,8 @@
   }
 }
 
-.mb-sm-6 {
-  @media (min-width: 576px) {
+.mb-ll-6 {
+  @media (min-width: 1600px) {
     margin-bottom: 6rem !important;
   }
 }
