--- a/css/app.css
+++ b/css/app.css
@@ -9587,7 +9587,6 @@ h3 {
 }
 .btn-custom {
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
-  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
   border-radius: 2.25rem;
   padding: 0.775rem 3rem;
   color: #FFF;
@@ -9595,12 +9594,12 @@ h3 {
 .btn-custom:hover {
   color: #FFF;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
-  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
+  box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 .btn-custom:focus {
   color: #FFF;
   background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
-  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
+  box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
 .btn-inline-custom, .btn-inline-custom2 {
@@ -9704,8 +9703,8 @@ h3 {
   width: 26% !important;
 }
 
-@media (min-width: 576px) {
-  .mb-sm-6 {
+@media (min-width: 1600px) {
+  .mb-ll-6 {
     margin-bottom: 6rem !important;
   }
 }
@@ -10239,6 +10238,7 @@ button:focus {
 }
 .l_tariff .l_tariff--content .card .card-body .card-list li.inactive {
   text-decoration: line-through;
+  color: #7f7f7f;
 }
 .l_tariff .l_tariff--content .card .card-body .l_tar-list--free li::before {
   background-color: #7e7e7e;
@@ -10349,7 +10349,7 @@ button:focus {
     background-size: calc(70vh);
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 768px) {
   .l_feedback .l_feedback--bgg {
     background-position: 0 112%;
   }
@@ -10367,7 +10367,7 @@ button:focus {
 }
 @media (min-height: 1200px) and (min-width: 1010px) and (max-width: 1300px) {
   .l_feedback .l_feedback--bgg {
-    background-position: 0 110%;
+    background-position: calc(50vw - 520px) 110%;
   }
 }
 .l_feedback .l_header--h1 {
