--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,20 +1,19 @@
 .btn-custom {
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
-  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
-  border-radius: 2.25rem;
+   border-radius: 2.25rem;
   padding: 0.775rem 3rem;
   color: #FFF;
 
   &:hover {
     color: #FFF;
     background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
-    box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
+    box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
 
   &:focus {
     color: #FFF;
     background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
-    box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
+    box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
 
 }
