--- a/css/app.css
+++ b/css/app.css
@@ -10280,6 +10280,11 @@ button:focus {
     left: -15px;
   }
 }
+@media (max-width: 1200px) {
+  .l_tariff .l_tariff--footer {
+    margin-top: 60px;
+  }
+}
 .l_tariff .l_tariff--footer .l_tariff-footer--content {
   position: relative;
   z-index: 23;
