--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -533,6 +533,9 @@ button:focus {
       width: calc(100% + 30px);
       left: -15px;
     }
+    @media (max-width: 1200px) {
+      margin-top: 60px;
+    } 
     .l_tariff-footer--content {
       position: relative;
       z-index: 23;
