--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -153,7 +153,7 @@ button:focus {
       left: calc(50% - 260px);
     }
   }
-  @media (max-width: 991px) {
+  @media (max-width: 576px) {
     &::before {
       content: none;
     }
@@ -284,6 +284,7 @@ button:focus {
     display: flex;
     align-items: center;
     height: 83%;
+    width: 100%;
     @media (max-width: 576px) {
       height: 100%;
     }
@@ -296,6 +297,9 @@ button:focus {
 
     .masthead-content {
       padding-top: 4rem;
+      @media (max-width: 576px) {
+        padding-top: 2rem;
+      }
       h1 {
         font-size: 57px;
         //font-family: 'RubikRegular', sans-serif;
@@ -325,7 +329,7 @@ button:focus {
         @media (max-width: 541px) {
           font-size: 16px;
         }
-        @media (max-width: 991px) {
+        @media (max-width: 576px) {
           max-width: 100%;
         }
       }
