--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -148,6 +148,17 @@ button:focus {
       background-position: 340px 115%;
     }
   }
+
+  @media (min-width: 1921px) {
+    &::before {
+      background-size: 75%;
+    }
+  }
+  @media (min-width: 2250px) {
+    &::before {
+      background-size: 100%;
+    }
+  }
   @media (max-width: 1199px) {
     &::before {
       left: calc(50% - 260px);
@@ -434,7 +445,9 @@ button:focus {
       }
     }
     .l_card--premium {
-      background: #FFF url(../images/tariff_bg_element.svg) no-repeat 100% top;
+      background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+      background-size: 43%;
+      background-position: 126% -6%;
       @media (min-width: 992px) {
         border-radius: 0 8px 8px 0 !important;
       }
