--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -21,7 +21,7 @@
 .btn-inline-custom {
   color: #FFF;
   background-color: #FF3C88;
-  font-size: 16px;
+  font-size: 1rem;
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
@@ -57,7 +57,7 @@
 
 .btn-outline-custom {
   color: #FF3C88;
-  font-size: 16px;
+  font-size: 1rem;
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
@@ -96,7 +96,7 @@
 
 .btn-custom-lg {
   padding: 1rem 8rem;
-  font-size: 23px;
+  font-size: 1.43rem;
   border-radius: 2.25rem;
   @media (max-width: 541px) {
     padding: 0.5rem 5rem;
