--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,4 +1,6 @@
 .btn-custom {
+  background-position: -2px;
+  background-size: 101%;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
    border-radius: 2.25rem;
   padding: 0.775rem 3rem;
