--- a/css/app.css
+++ b/css/app.css
@@ -9731,6 +9731,8 @@ h3 {
   }
 }
 .btn-custom {
+  background-position: -2px;
+  background-size: 101%;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
   border-radius: 2.25rem;
   padding: 0.775rem 3rem;
@@ -10487,7 +10489,7 @@ button:focus {
 
 .l_feedback {
   overflow: hidden;
-  background: url(../images/feedback_bg1.svg), url(../images/feedback_bg2.svg);
+  background: url(../images/feedback_bg1.png), url(../images/feedback_bg2.png);
   background-position: left top, right bottom;
   background-repeat: no-repeat;
   background-color: #EDEFFF;
@@ -10497,11 +10499,18 @@ button:focus {
   height: 100vh;
   padding-bottom: 670px;
   position: relative;
+  top: -2px;
 }
 @media (max-width: 768px) {
   .l_feedback {
     background: #EDEFFF;
     padding-bottom: 0;
+  }
+}
+@media (max-height: 700px) and (max-width: 400px) {
+  .l_feedback {
+    display: flex;
+    align-items: center;
   }
 }
 .l_feedback .l_feedback--bgg {
@@ -10648,9 +10657,11 @@ button:focus {
   color: #6C42CE;
   width: 100%;
   height: 100%;
+  font-weight: 500;
   text-transform: uppercase;
 }
 .l_footer .widget-currency .gl-list li a:hover {
   color: #FFF;
+  font-weight: 500;
   background-color: #6C42CE;
 }
