--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -598,7 +598,7 @@ button:focus {
 
 .l_feedback {
   overflow: hidden;
-  background: url(../images/feedback_bg1.svg), url(../images/feedback_bg2.svg);
+  background: url(../images/feedback_bg1.png), url(../images/feedback_bg2.png);
   background-position: left top, right bottom;
   background-repeat: no-repeat;
   background-color: #EDEFFF;
@@ -608,9 +608,14 @@ button:focus {
   height: 100vh;
   padding-bottom: 670px;
   position: relative;
+  top: -2px;
   @media (max-width: 768px) {
     background: #EDEFFF;
     padding-bottom: 0;
+  }
+  @media (max-height: 700px) and (max-width: 400px) {
+    display: flex;
+    align-items: center;
   }
   .l_feedback--bgg{
     position: absolute;
@@ -754,10 +759,12 @@ button:focus {
           color: #6C42CE;
           width: 100%;
           height: 100%;
+          font-weight: 500;
           text-transform: uppercase;
 
           &:hover {
             color: #FFF;
+            font-weight: 500;
             background-color: #6C42CE;
           }
         }
