--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -749,13 +749,18 @@ button:focus {
       li {
         border: 2px solid #6C42CE;
         border-right: none;
-
+        padding: 5px 9px;
         &:last-child {
           border-right: 2px solid #6C42CE;
         }
-
+        &:hover{
+          background-color: #6C42CE;
+          a{
+            color: #fff;
+          }
+        }
         a {
-          padding: 0.4375rem 0.625rem;
+         // padding: 0.4375rem 0.625rem;
           color: #6C42CE;
           width: 100%;
           height: 100%;
