--- a/css/app.css
+++ b/css/app.css
@@ -10648,7 +10648,7 @@ button:focus {
 .l_footer .widget-currency .gl-list li {
   border: 2px solid #6C42CE;
   border-right: none;
-  padding: 5px 9px;
+  padding: 0 9px;
 }
 .l_footer .widget-currency .gl-list li:last-child {
   border-right: 2px solid #6C42CE;
