--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
+//@import '~fullcalendar/dist/fullcalendar.min.css';
 //SLICK slider
 //@import '~slick-carousel/slick/slick';
 // FontAwesome
@@ -23,7 +25,8 @@ body {
 a {
   text-decoration: none;
   //color: #1f2022;
-  color: #FF3C88;
+  //color: #FF3C88;
+  color: #2c2d2e;
 
   &:hover {
     color: #cd2868;
@@ -34,6 +37,11 @@ a {
     color: #b01e56;
     text-decoration: none;
   }
+}
+
+.btn:focus, .btn.focus {
+  outline: 0;
+  box-shadow: none;
 }
 
 button:focus {
@@ -79,26 +87,7 @@ button:focus {
   padding: 0 15%;
   margin-bottom: 0;
   @media (max-width: 768px) {
-  padding: unset;
-  }
-}
-
-
-.l_ud {
-  z-index: 10;
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 6px;
-    left: 0;
-    width: 52%;
-    height: 6px;
-    background-color: #E678AB;
-    z-index: -1;
-    @media (max-width: 1200px) {
-      content: none;
-    }
+    padding: unset;
   }
 }
 
@@ -108,588 +97,171 @@ button:focus {
 }
 
 
-.bgg {
-  position: relative;
-  height: 100%;
-    @media (max-width: 991px) {
-      max-width: 100vw;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-items: center;
-      justify-content: center;
-    }
-  &::before {
-    content: "";
-    width: 1977px;
-    height: 100%;
-    position: absolute;
-    background: url(../images/bg_forms.svg);
-    background-position: 0 0;
-    background-repeat:  no-repeat;
-    top: 0;
-    left: calc(50% - 348px);
-  }
-
-  .bgg2{
-       position: absolute;
-       min-height: 100vh;
-       min-width: 100vw;
-       background: url(../images/ilustration.svg);
-       background-position: 305px 115%;
-       background-repeat: no-repeat;
-       background-size: calc(100vh + 200px);
-       top: 0;
-       left: 0;
-    @media (max-width: 991px) {
-        background: unset;
-      }
-    @media (max-height: 760px) {
-      background-position: 340px 115%;
-    }
-  }
-
-  @media (min-width: 1921px) {
-    &::before {
-      background-size: 75%;
-    }
-  }
-  @media (min-width: 2250px) {
-    &::before {
-      background-size: 100%;
-    }
-  }
-  @media (max-width: 1199px) {
-    &::before {
-      left: calc(50% - 260px);
-    }
-  }
-  @media (max-width: 991px) {
-    &::before {
-      background-position: 0 13%;
-    }
-  }
-  @media (max-width: 576px) {
-    &::before {
-      content: none;
-    }
-  }
-}
-
-
 // HEADER
 .l_header {
-  overflow: hidden;
   position: relative;
-  height: 100vh;
+  z-index: 100;
+  padding: 22px 0;
+  background-color: rgb(255, 253, 253);
+  box-shadow: 0px 0px 5.95px 1.05px rgba(69, 65, 78, 0.08);
+
   .l_header--navbar {
+    font-weight: 500;
     @media (max-width: 991px) {
-      border-bottom: 1px solid #E5E9EF;
-      width: 100vw;
       background-color: white;
       padding: 0.5rem 1rem !important;
-      top: 0;
-      z-index: 1030;
-      position: fixed;
-    }
-    .navbar-brand{
-      z-index: 100;
-    }
-    .l_header--menu {
-      //font-family: 'MontserratMedium', sans-serif;
-      font-family: Montserrat;
-      font-weight: 500;
-
-      .l_lang {
-        .nav-link {
-          display: inline-flex;
-          background-color: #FFF;
-          padding-right: 0.9375rem !important;
-          padding-left: 0.9375rem !important;
-
-        }
-
-        .l_current_lang {
-          &--ru {
-            color: #FFF !important;
-            background-color: #E475AC;
-            @media (max-width: 991px) {
-              color: #000;
-            }
-
-            &:hover {
-              color: darken(#FFF, 20%) !important;
-              @media (max-width: 991px) {
-                color: darken(#FFF, 20%) !important;
-              }
-            }
-          }
-
-          &--en {
-            color: #E475AC !important;
-            background-color: #FFF;
-
-            &:hover {
-              color: darken(#E475AC, 20%) !important;
-            }
-          }
-        }
-      }
-
-      .nav-item {
-        .nav-link {
-          padding-right: 2.0625rem;
-          padding-left: 2.0625rem;
-          letter-spacing: 3px;
-          color: #FFF;
-          font-size: 1.32rem;
-
-          text-transform: uppercase;
-          @media (max-width: 1400px) {
-            font-size: 1rem;
-          }
-          @media (max-width: 991px) {
-            padding: 1rem 1rem;
-          }
-          &:hover {
-            color: darken(#FFF, 20%);
-          }
-
-          @media (min-width: 992px) and (max-width: 1200px) {
-            padding-right: 1.25rem;
-            padding-left: 1.25rem;
-          }
-        }
-
-        .l_auth__button {
-          background-color: #ff3c88;
-          width: 165px;
-          height: 47px;
-          text-transform: none;
-          @media (max-width: 1400px) {
-            width: 165px;
-            height: 44px;
-          }
-          @media (max-width: 1199px) {
-            width: 135px;
-            height: 41px;
-          }
-          @media (max-width: 991px) {
-            width: 165px;
-            height: 63px;
-          }
-
-          &:hover {
-            color: #FFF;
-            background-color: #cd2868;
-          }
-
-          &:focus {
-            color: #FFF;
-            background-color: #b01e56;
-          }
-        }
-      }
     }
   }
 
-  .masthead {
-    position: relative;
-    overflow: hidden;
-    z-index: 2;
-    display: flex;
-    align-items: center;
-    height: 83%;
-    width: 100%;
-    @media (max-width: 576px) {
-      height: 100%;
-    }
-    @media (min-width: 992px) {
-      //height: 100%;
-      min-height: 0;
-      width: 40.5rem;
-      padding-bottom: 0;
-    }
+  .l_tariff-range {
+    font-size: 18px;
+    color: rgb(44, 45, 46);
+    font-weight: 500;
+  }
 
-    .masthead-content {
-      padding-top: 4rem;
-      @media (max-width: 576px) {
-        padding-top: 2rem;
+  .l_tariff-button {
+    font-size: 23px;
+    font-weight: 500;
+    width: 106px;
+    height: 36px;
+    background-color: rgb(255, 60, 136);
+    text-align: center;
+    color: #fff;
+  }
+}
+
+.l_site-main {
+  .sidenav {
+    border-width: 1px;
+    border-color: #F3EDFB;
+    border-style: solid;
+    background-color: #FFFDFD;
+    border-top: none;
+    @media (max-width: 1200px) {
+      //position: relative;
+      aside {
+        height: auto;
       }
-      h1 {
-        font-size: 3.55rem;
-        //font-family: 'RubikRegular', sans-serif;
-        font-family: Rubik;
-        font-weight: 400;
-        @media (max-height: 900px) {
-          font-size: 3.125rem;
+      overflow: auto;
+      height: 100%; /* Full-height: remove this if you want "auto" height */
+      width: 390px; /* Set the width of the sidebar */
+      position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+      z-index: 1; /* Stay on top */
+      top: 0; /* Stay at the top */
+      left: 0;
+      overflow-x: hidden; /* Disable horizontal scroll */
+      padding-top: 120px;
+
+      a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+
+        &:hover {
+          color: #f1f1f1;
         }
-        @media (max-height: 768px) {
-          font-size: 2.9375rem;
-        }
-        @media (max-width: 541px) {
-          font-size: 2.5rem;
+      }
+    }
+
+    .l_site-sidebar {
+      padding-top: 30px;
+
+      .l_user-info {
+        .l_user-photo {
+          max-width: 150px;
+          border-radius: 50%;
         }
 
-        .bold {
-          //font-family: 'RubikMedium', sans-serif;
-          font-family: Rubik;
+        .l_user-login {
+          font-size: 24px;
           font-weight: 500;
         }
+        .l_user-name{
+          font-size: 18px;
+          font-weight: 500;
+        }
+        .l_user-edit{
+          font-weight: 500;
+          font-size: 14px;
+        }
       }
+    }
+  }
 
-      .sub_text {
-        color: #c3c1c1;
-        font-size: 1.12rem;
-        max-width: 400px;
-        @media (max-width: 541px) {
-          font-size: 1rem;
-        }
-        @media (max-width: 576px) {
-          max-width: 100%;
-        }
-      }
+  .l_template-desc {
+    a {
+      font-weight: 500;
+      text-decoration: underline;
+    }
+  }
+
+  .l_site-content {
+    padding-top: 30px;
+    margin-bottom: 30px;
+
+    .l_create-pub {
+      margin-bottom: 5px;
+    }
+
+    .l_total-public {
+      font-size: 0.75rem;
+      font-weight: 600;
+      color: #999999;
+      margin-right: 15px;
     }
   }
 }
 
-.l_capability {
-  height: 100%;
-  padding-top: 2.5rem;
-  background-color: #EDEFFF;
-  position: relative;
-  overflow: hidden;
-  .container {
-    position: relative;
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -17%;
-      left: 98%;
-      width: 358px;
-      z-index: 5;
-      height: 770px;
-      background: url(../images/element.png) no-repeat;
+.fc {
+  margin-bottom: 40px;
+
+  .fc-header-toolbar {
+    .fc-left h2 {
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+
+    .fc-button-group {
+    }
+
+    .fc-button {
+      color: #282A2C;
+      font-weight: 500;
+      background-color: #E3C7FF;
+      padding: 0.25rem 1em;
+      border-radius: 0;
+      border: 1px solid #CB9CFF;
+      background-image: none;
     }
   }
 
-  .l_cap--card {
-    //font-family: 'MontserratMedium', sans-serif;
-    font-family: Montserrat;
-    font-weight: 500;
-    text-align: center;
-    .l_cap--number {
-      font-size: 19rem;
-      color: #BD90E4;
-      line-height: 1;
-      @media (max-height: 1079px) {
-        //font-size: 13rem;
-      }
-      @media (max-height: 900px) {
-        //font-size: 10rem;
-      }
-      @media (max-width: 541px) {
-        font-size: 9.375rem;
-      }
-      @media (max-width: 768px) {
-        font-size: 12.5rem;
-      }
-      @media (max-width: 991px) {
-        font-size: 15.625rem;
-
-      }
-    }
-
-    .l_cap--desc {
-      font-size: 1.13rem;
-      text-align: center;
+  .fc-row {
+    table th {
+      font-weight: 500;
     }
   }
-
-  .l_capability--footer {
-    margin-top: 1.875rem;
-    margin-bottom: 1.25rem;
-
-    .l_cap--other {
-      a {
-        position: relative;
-        font-size: 1.5rem;
-        //font-family: RubikRegular, sans-serif;
-        font-family: Rubik;
-        font-weight: 400;
-        color: rgb(14, 26, 63);
-        border-bottom: 2px solid;
-        text-transform: uppercase;
-        line-height: 1.5;
-        text-align: center;
-      }
-    }
-  }
-}
-
-.l_tariff {
-  background-color: #F8FBFC;
-  padding-top: 3.4375rem;
-  z-index: 20;
-  position: relative;
-
-  .l_tariff--content {
-    background-color: #FFF;
-    margin-top: 1.25rem;
-    @media (max-width: 991px) {
-      background-color: unset;
-    }
-    .l_card--free{
-      @media (min-width: 992px) {
-        border-radius: 8px 0 0 8px !important;
-      }
-    }
-    .l_card--premium {
-      background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
-      background-size: 43%;
-      background-position: 126% -6%;
-      @media (min-width: 992px) {
-        border-radius: 0 8px 8px 0 !important;
-      }
-    }
-    .card {
-      border: none;
-      box-shadow: 0 13px 51px 0 rgba(68, 72, 230, 0.06);
-      border-right: 1px solid #F6EDFC;
-      border-radius: unset;
-      @media (max-width: 991px) {
-        margin-top: 0.3125rem;
-      }
-      .card-body {
-        .card-title {
-          color: #BD90E4;
-          margin-top: 1.5625rem;
-          text-align: center;
-          border-bottom: 1px solid #F6EDFC;
-          padding-bottom: 2.0625rem;
-          font-weight: bold;
-          font-size: 1.5rem;
-          text-transform: uppercase;
-        }
-
-        .l_tar-title--free {
-          color: #7e7e7e;
-        }
-
-        .card-list {
-          list-style: none;
-          padding-left: 0.9375rem;
-          font-size: 0.8125rem;
-          line-height: 1.5rem;
-
-          li {
-            &::before {
-              content: "";
-              border-radius: 50%;
-              background-color: #BD90E4;
-              position: absolute;
-              left: 17px;
-              width: 10px;
-              margin-top: 0.3125rem;
-              height: 11px;
-              z-index: 125;
-            }
-          }
-
-          li.inactive {
-            text-decoration: line-through;
-            color: #7f7f7f;
-          }
-        }
-
-        .l_tar-list--free {
-          li {
-            &::before {
-              background-color: #7e7e7e;
-            }
-          }
-        }
-
-        .l_tar-price {
-          margin-top: 1.875rem;
-          text-align: center;
-          //font-family: MontserratBold, sans-serif;
-          font-family: Montserrat;
-          font-weight: 700;
-          font-size: 2.9rem;
-
-          .l_tar-price--period {
-            font-size: 0.875rem;
-            color: #adadad;
-          }
-        }
-      }
-
-      .l_tar-footer {
-        margin-top: 1.25rem;
-      }
-
-      .l_tar-footer--free {
-        .btn-outline-custom {
-          color: #1a2547;
-          border-color: #1a2547;
-
-          &:hover {
-            color: #FFF;
-            background-color: #1a2547;
-            border-color: #1a2547;
-          }
-        }
-      }
-    }
-  }
-
-  .l_tariff--footer {
-    position: relative;
-    margin-top: 9.0625rem;
-    background-color: #612ADE;
-    color: #FFF;
-    padding-top: 2.5rem;
-    padding-bottom: 2.8125rem;
-    @media (max-width: 576px) {
-      width: calc(100% + 30px);
-      left: -15px;
-    }
-    @media (max-width: 1200px) {
-      margin-top: 3.75rem;
-    } 
-    .l_tariff-footer--content {
-      position: relative;
-      z-index: 23;
-
-      .l_tariff--msg {
-         font-size: 1.45rem;
-        word-spacing: 6px;
-        margin: 0.25rem 0;
-        //font-family: "MontserratRegular", sans-serif;
-        font-family: Montserrat;
-        font-weight: 400;
-      }
-
-      .l_tariff-callback--msg {
-        font-size: 1.43rem;
-        word-spacing: 6px;
-       //font-family: MontserratBold, sans-serif;
-        font-family: Montserrat;
-        font-weight: 700;
-        margin-bottom: 1.875rem;
-      }
-    }
-
-    &::after {
-      content: "";
-      background: url(../images/tariff_illustration.svg) no-repeat 70% bottom;
-      width: 232px;
-      height: 510px;
-      position: absolute;
-      right: 9%;
-      bottom: -100px;
-      @media (max-width: 1200px) {
-        content: none;
-      }
-    }
-  }
-}
-
-.l_feedback {
-  overflow: hidden;
-  background: url(../images/feedback_bg1.png), url(../images/feedback_bg2.png);
-  background-position: left top, right bottom;
-  background-repeat: no-repeat;
-  background-color: #EDEFFF;
-  padding-top: 4.6875rem;
-  background-size: 14vh, 49vh;
-  z-index: 20;
-  height: 100vh;
-  padding-bottom: 670px;
-  position: relative;
-  top: -2px;
-  @media (max-width: 768px) {
-    background: #EDEFFF;
-    padding-bottom: 0;
-  }
-  @media (max-height: 700px) and (max-width: 400px) {
+  .fc-content {
     display: flex;
     align-items: center;
-  }
-  .l_feedback--bgg{
-    position: absolute;
-    min-height: 100vh;
-    min-width: 100vw;
-    background: url(../images/feedback_Illustration.svg);
-    background-position: 59% 122%;
-    background-repeat: no-repeat;
-    background-size: calc(83vh);
-    bottom: 0;
-    left: 0;
-    @media (max-height: 900px) {
-      background-position: 59% 112%;
-      background-size: calc(70vh);
-    }
-    @media (max-width: 768px) {
-      background-position: 0 112%;
-    }
-    @media (max-width: 440px) {
-      background-position: 0 110%;
-      background-size: calc(58vh);
-    }
-    @media (max-height: 700px) and (max-width: 400px) {
-      background: none;
-    }
-    @media (min-height: 1200px) and (min-width: 1010px) and (max-width: 1300px) {
-      background-position: calc(50vw - 520px) 110%;
-    }
-  }
-  .l_header--h1 {
-    font-family: Montserrat;
-    font-weight: 500;
-    margin-bottom: 0.9375rem;
+    justify-content: space-between;
   }
 
-  .l_header--h2 {
-    font-family: Montserrat;
-    font-weight: 700;
-    margin-bottom: 0.625rem;
+  .fc-event, .fc-event-dot {
+    background-color: transparent;
   }
 
-  .l_feedback--msg {
-    margin-top: 3.4375rem;
-    display: inline-flex;
-    font-size: 1.5rem;
-    position: relative;
-    @media (min-width: 542px) and (max-width: 768px) {
-      font-size: 1.125rem;
-      margin-top: 5rem;
-    }
-    @media (max-width: 541px) {
-      font-size: 0.9375rem;
-      margin-top: 5rem;
-    }
-
-    &::before {
-      content: "";
-      background: url(../images/feedback_Icon.svg) no-repeat center;
-      position: absolute;
-      width: 45px;
-      height: 55px;
-      bottom: 0;
-      left: -60px;
-      @media (max-width: 768px) {
-        left: calc(50% - 25px);
-        bottom: 100%;
-      }
-    }
+  .fc-event {
+    border: none;
   }
 }
 
 .l_footer {
-  margin-top: 2.5rem;
+  padding-top: 2.5rem;
   line-height: 2rem;
+  background-color: rgb(255, 253, 253);
+  box-shadow: 0px 0px 5.95px 1.05px rgba(69, 65, 78, 0.08);
 
   a {
     color: #1f2022;
@@ -707,7 +279,7 @@ button:focus {
   }
 
   .l_footer--logo {
-     font-size: 2.25rem;
+    font-size: 2.25rem;
     font-family: Rubik;
     font-weight: 400;
     text-transform: uppercase;
@@ -740,6 +312,47 @@ button:focus {
     background: url(../images/sprite.png) no-repeat -36px 0;
   }
 
+  .widget-lang {
+    margin-top: 1rem;
+
+    .gl-list {
+      display: inline-flex;
+      box-shadow: 0 2px 10.92px 2.08px rgba(98, 68, 201, 0.15);
+
+      li {
+        .lang-ru {
+          color: #FFF !important;
+          background-color: #E475AC;
+          @media (max-width: 991px) {
+            color: #000;
+          }
+
+          &:hover {
+            color: darken(#FFF, 20%) !important;
+            @media (max-width: 991px) {
+              color: darken(#FFF, 20%) !important;
+            }
+          }
+        }
+
+        .lang-en {
+          color: #E475AC !important;
+          background-color: #EBEBEB;
+
+          &:hover {
+            color: darken(#E475AC, 20%) !important;
+          }
+        }
+
+        a {
+          padding: 0.5rem 1rem;
+          font-weight: 500;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+
   .widget-currency {
     margin-top: 0.5rem;
 
@@ -750,17 +363,20 @@ button:focus {
         border: 2px solid #6C42CE;
         border-right: none;
         padding: 0 9px;
+
         &:last-child {
           border-right: 2px solid #6C42CE;
         }
-        &:hover{
+
+        &:hover {
           background-color: #6C42CE;
-          a{
+
+          a {
             color: #fff;
           }
         }
+
         a {
-          //padding: 0.4375rem 0.625rem;
           color: #6C42CE;
           width: 100%;
           height: 100%;
