--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -62,8 +62,10 @@
   border: solid 1px #6244c9;
   border-radius: 10px;
   background-color: #6244c9;
-  padding: 0.55rem 2rem;
+  padding: 0.55rem 1.45rem;
   font-size: 0.875rem;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
   &:hover {
     color: #FFF;
     border-color: #4f34ab;
@@ -75,8 +77,8 @@
     background-color: #3b287e;
   }
   & svg{
-    width: 15px;
-    margin-right: 5px;
+    width: 11px;
+    margin-right: 3px;
   }
 }
 
